--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -17,6 +17,7 @@ OUT_NODE_DEC_JS = dec/avif_node_dec.js
 OUT_ENC_CPP = enc/avif_enc.cpp
 OUT_ENC_CPP = enc/avif_enc.cpp
 OUT_DEC_CPP = dec/avif_dec.cpp
+ENVIRONMENT = worker
 
 HELPER_MAKEFLAGS := -f helper.Makefile
 
@@ -24,7 +25,8 @@ HELPER_MAKEFLAGS := -f helper.Makefile
 
 all: $(OUT_ENC_JS) $(OUT_DEC_JS) $(OUT_ENC_MT_JS) $(OUT_NODE_ENC_JS) $(OUT_NODE_DEC_JS)
 
-$(OUT_ENC_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
+$(OUT_NODE_ENC_JS): ENVIRONMENT=node 
+$(OUT_NODE_ENC_JS) $(OUT_ENC_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
 	$(MAKE) \
 		$(HELPER_MAKEFLAGS) \
 		OUT_JS=$@ \
@@ -34,20 +36,7 @@ $(OUT_ENC_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLis
 			-DCONFIG_MULTITHREAD=0 \
 			-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		" \
-		ENVIRONMENT="worker" \
-		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_DECODE=0"
-
-$(OUT_NODE_ENC_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
-	$(MAKE) \
-		$(HELPER_MAKEFLAGS) \
-		OUT_JS=$@ \
-		OUT_CPP=$< \
-		LIBAOM_FLAGS="\
-			-DCONFIG_AV1_DECODER=0 \
-			-DCONFIG_MULTITHREAD=0 \
-			-DCONFIG_AV1_HIGHBITDEPTH=0 \
-		" \
-		ENVIRONMENT="node" \
+		ENVIRONMENT=$(ENVIRONMENT) \
 		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_DECODE=0"
 
 $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
@@ -59,11 +48,12 @@ $(OUT_ENC_MT_JS): $(OUT_ENC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMake
 			-DCONFIG_AV1_DECODER=0 \
 			-DCONFIG_AV1_HIGHBITDEPTH=0 \
 		" \
-		ENVIRONMENT="worker" \
+		ENVIRONMENT=$(ENVIRONMENT) \
 		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_DECODE=0" \
 		OUT_FLAGS="-pthread"
 
-$(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
+$(OUT_NODE_DEC_JS): ENVIRONMENT=node
+$(OUT_NODE_DEC_JS) $(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLists.txt
 	$(MAKE) \
 		$(HELPER_MAKEFLAGS) \
 		OUT_JS=$@ \
@@ -72,19 +62,7 @@ $(OUT_DEC_JS): $(OUT_DEC_CPP) $(CODEC_DIR)/CMakeLists.txt $(LIBAOM_DIR)/CMakeLis
 			-DCONFIG_AV1_ENCODER=0 \
 			-DCONFIG_MULTITHREAD=0 \
 		" \
-		ENVIRONMENT="worker" \
-		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_ENCODE=0"
-
-$(OUT_NODE_DEC_JS):
-	$(MAKE) \
-		$(HELPER_MAKEFLAGS) \
-		OUT_JS=$@ \
-		OUT_CPP=$< \
-		LIBAOM_FLAGS="\
-			-DCONFIG_AV1_ENCODER=0 \
-			-DCONFIG_MULTITHREAD=0 \
-		" \
-		ENVIRONMENT="node" \
+		ENVIRONMENT=$(ENVIRONMENT) \
 		LIBAVIF_FLAGS="-DAVIF_CODEC_AOM_ENCODE=0"
 
 $(CODEC_PACKAGE):
