--- a/codecs/imagequant/Makefile
+++ b/codecs/imagequant/Makefile
@@ -2,13 +2,15 @@ CODEC_URL := https://github.com/ImageOptim/libimagequant/archive/2.12.1.tar.gz
 CODEC_DIR := node_modules/libimagequant
 CODEC_OUT_RELATIVE := libimagequant.a
 CODEC_OUT := $(addprefix $(CODEC_DIR)/, $(CODEC_OUT_RELATIVE))
-OUT_JS := imagequant.js
-OUT_NODE_JS := imagequant_node.js
+OUT_JS := imagequant.js imagequant_node.js
+OUT_WASM := $(OUT_JS:.js=.wasm)
+ENVIRONMENT = worker
 
 .PHONY: all clean
 
 all: $(OUT_JS) $(OUT_NODE_JS)
 
+imagequant_node.js: ENVIRONMENT=node
 $(OUT_JS): $(CODEC_OUT)
 	$(CXX) \
 		-I $(CODEC_DIR) \
@@ -19,13 +21,12 @@ $(OUT_JS): $(CODEC_OUT)
 		-s ALLOW_MEMORY_GROWTH=1 \
 		-s MODULARIZE=1 \
 		-s TEXTDECODER=2 \
-		-s ENVIRONMENT='worker' \
+		-s ENVIRONMENT=$(ENVIRONMENT) \
 		-s EXPORT_ES6=1 \
 		-o $@ \
 		$+ \
 		imagequant.cpp
 
-$(OUT_NODE_JS): $(CODEC_OUT)
 	$(CXX) \
 		-I $(CODEC_DIR) \
 		${CXXFLAGS} \
@@ -55,5 +56,5 @@ $(CODEC_DIR):
 	curl -sL $(CODEC_URL) | tar xz --strip 1 -C $@
 
 clean:
-	$(RM) $(OUT_JS) *.wasm
+	$(RM) $(OUT_JS) $(OUT_WASM)
 	$(MAKE) -C $(CODEC_DIR) clean
