--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@surma/rollup-plugin-off-main-thread": "^1.4.2",
     "@types/dedent": "^0.7.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.7",
     "comlink": "^4.3.0",
     "cssnano": "^4.1.10",
@@ -27,7 +28,7 @@
     "linkstate": "^2.0.0",
     "lint-staged": "^10.5.1",
     "lodash.camelcase": "^4.3.0",
-    "mime-types": "^2.1.27",
+    "mime-types": "^2.1.28",
     "npm-run-all": "^4.1.5",
     "pointer-tracker": "^2.4.0",
     "postcss": "^7.0.35",
