--- a/codecs/hqx/Cargo.toml
+++ b/codecs/hqx/Cargo.toml
@@ -3,6 +3,9 @@ name = "squooshhqx"
 version = "0.1.0"
 authors = ["Surma <surma@surma.link>"]
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
 crate-type = ["cdylib"]
 
