--- a/codecs/resize/Cargo.toml
+++ b/codecs/resize/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 authors = ["Surma <surma@surma.link>"]
 publish = false
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
-#crate-type = ["cdylib", "rlib"]
 crate-type = ["cdylib"]
 
 [features]
@@ -25,8 +27,6 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
-#
-# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
