[cli] Handle all color types in png decoder
Add conversions for all color types in PNG decoder used in CLI. (While at it, also made few minor cleanups.)

Fixes #971.

--- a/codecs/png/Cargo.toml
+++ b/codecs/png/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib"]
 png = "0.16.7"
 wasm-bindgen = "0.2.68"
 web-sys = { version = "0.3.45", features = ["ImageData"] }
+rgb = "0.8.25"
 
 [profile.release]
 lto = true
