--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -1,5 +1,6 @@
 # Tracking the version in google3/third_party/libavif
-CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/f56df6d4c99928af484634af65cdbd62bac2dd6e.tar.gz
+# TODO: the above isn't true right now
+CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/33cff6b658cb27152193074a2ca3e0332d9061ba.tar.gz
 CODEC_PACKAGE = node_modules/libavif.tar.gz
 
 # Tracking the version in google3/third_party/libaom
