--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -1,10 +1,10 @@
-# Tracking the version in google3/third_party/libavif
-# TODO: the above isn't true right now
-CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/1809baa9ef3d6b31a12976166e36534504deb88c.tar.gz
+# libavif and libaom versions are from
+# https://docs.google.com/document/d/1wEEA5rRU7wT54k41u3qyZIZHDCJArIMzLuzsrLAwaK8/edit
+CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/d37ef74127986184500e571bf1f9793cc0bdef50.tar.gz
 CODEC_PACKAGE = node_modules/libavif.tar.gz
 
 # Tracking the version in google3/third_party/libaom
-LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/4a8e276e3e0ef3c76083f3975d5caa85bc9593ce.tar.gz
+LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/0a5da45c7f942908974f5ab8e107c9fa82048ae7.tar.gz
 LIBAOM_PACKAGE = node_modules/libaom.tar.gz
 
 export CODEC_DIR = node_modules/libavif
