--- a/cli/package.json
+++ b/cli/package.json
@@ -1,32 +1,24 @@
 {
   "name": "@squoosh/cli",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "A CLI for Squoosh",
   "public": true,
+  "type": "module",
   "bin": {
-    "squoosh-cli": "build/index.js",
-    "@squoosh/cli": "build/index.js"
+    "squoosh-cli": "src/index.js",
+    "@squoosh/cli": "src/index.js"
   },
-  "scripts": {
-    "build": "rollup -c"
-  },
+  "files": [
+    "/src/index.js"
+  ],
   "keywords": [],
   "author": "Google Chrome Developers <chromium-dev@google.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "web-streams-polyfill": "^3.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "commander": "^6.0.0",
-    "json5": "^2.1.3",
-    "kleur": "^4.1.3",
-    "ora": "^5.1.0",
-    "rollup": "^2.26.11",
-    "rollup-plugin-terser": "^7.0.2"
+    "@squoosh/api": "0.1.0",
+    "commander": "^6.2.1",
+    "json5": "^2.2.0",
+    "kleur": "^4.1.4",
+    "ora": "^5.4.0"
   }
 }
