Make it smaller

--- a/codecs/mozjpeg/Makefile
+++ b/codecs/mozjpeg/Makefile
@@ -27,10 +27,12 @@ $(OUT_WASM): $(CODEC_OUT)
 		-I $(CODEC_DIR) \
 		${CXXFLAGS} \
 		${LDFLAGS} \
+		-mexec-model=reactor \
 		-o $@ \
 		enc/mozjpeg_enc.cpp \
 		$(CODEC_OUT)
-	$(BINARYEN_PREFIX)/bin/wasm-opt -O3 -o $(OUT_WASM) $(OUT_WASM)
+	$(BINARYEN_PREFIX)/bin/wasm-opt -O4 -o $(OUT_WASM) $(OUT_WASM)
+	$(WABT_PREFIX)/bin/wasm-strip $(OUT_WASM)
 
 # This one is a bit special: there is no rule for .libs/libjpeg.a
 #  so we use libjpeg.la which implicitly builds that one instead.
