--- a/cli/package.json
+++ b/cli/package.json
@@ -15,7 +15,7 @@
   "author": "Google Chrome Developers <chromium-dev@google.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@squoosh/api": "0.1.0",
+    "@squoosh/lib": "0.1.0",
     "commander": "^7.2.0",
     "json5": "^2.2.0",
     "kleur": "^4.1.4",
