--- a/codecs/basis/Makefile
+++ b/codecs/basis/Makefile
@@ -38,6 +38,8 @@ CODEC_C_OBJECT_FILES := $(CODEC_C_SOURCE_FILES:.c=.o)
 CODEC_CPP_OBJECT_FILE_PATHS := $(addprefix $(CODEC_DIR)/, $(CODEC_CPP_OBJECT_FILES))
 CODEC_C_OBJECT_FILE_PATHS := $(addprefix $(CODEC_DIR)/, $(CODEC_C_OBJECT_FILES))
 
+override CXXFLAGS += -DBASISU_FORCE_DEVEL_MESSAGES=1
+
 .PHONY: all clean
 
 .PRECIOUS: $(CODEC_C_OBJECT_FILES) $(CODEC_CPP_OBJECT_FILES)
