--- a/libsquoosh/package.json
+++ b/libsquoosh/package.json
@@ -22,7 +22,10 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@types/node": "^15.6.1",
     "rollup": "^2.46.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.1.3",
+    "which": "^2.0.2"
   }
 }
