Typescriptify libsquoosh's codecs and emscripten-utils

--- a/libsquoosh/tsconfig.json
+++ b/libsquoosh/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../generic-tsconfig.json",
   "compilerOptions": {
     "lib": ["esnext"],
-    "types": ["node"]
+    "types": ["node"],
+    "allowJs": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "../codecs/**/*"]
 }
