--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -10,6 +10,9 @@ export CODEC_DIR = node_modules/libavif
 export BUILD_DIR = node_modules/build
 export LIBAOM_DIR = node_modules/libaom
 
+override CFLAGS += "-Wno-unused-macros"
+export
+
 OUT_ENC_JS = enc/avif_enc.js
 OUT_NODE_ENC_JS = enc/avif_node_enc.js
 OUT_ENC_MT_JS = enc/avif_enc_mt.js
