Specify supported node versions

--- a/libsquoosh/package.json
+++ b/libsquoosh/package.json
@@ -13,6 +13,9 @@
   "keywords": [],
   "author": "Google Chrome Developers <chromium-dev@google.com>",
   "license": "Apache-2.0",
+  "engines": {
+    "node": " ^12.5.0 || ^14.0.0 || ^16.0.0 "
+  },
   "dependencies": {
     "web-streams-polyfill": "^3.0.3"
   },
