Add AVIF thread support

--- a/libsquoosh/package.json
+++ b/libsquoosh/package.json
@@ -22,6 +22,7 @@
     "node": " ^12.5.0 || ^14.0.0 || ^16.0.0 "
   },
   "dependencies": {
+    "wasm-feature-detect": "^1.2.11",
     "web-streams-polyfill": "^3.0.3"
   },
   "devDependencies": {
