--- a/libsquoosh/tsconfig.json
+++ b/libsquoosh/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "lib": ["esnext"],
     "types": ["node"],
-    "allowJs": true
+    "allowJs": true,
+    "declaration": true
   },
   "include": ["src/**/*", "../codecs/**/*"]
 }
