--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-/codecs/**/*.js linguist-generated=true
-/codecs/*/pkg*/*.d.ts linguist-generated=true
+/codecs/**/*.js linguist-generated -diff
+/codecs/*/pkg*/*.d.ts linguist-generated
