Import strict-csp from npm

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "*.rs": "rustfmt"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
+    "strict-csp": "^1.0.2",
     "wasm-feature-detect": "^1.2.11"
   }
 }
