Publish codecs types in npm too
We weren't including these types so they were
becoming `any` for the `encode` options parameter.

--- a/libsquoosh/package.json
+++ b/libsquoosh/package.json
@@ -4,7 +4,7 @@
   "description": "A Node library for Squoosh",
   "public": true,
   "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "types": "./build/libsquoosh/types/index.d.ts",
   "files": [
     "/build/*"
   ],
