--- a/libsquoosh/package.json
+++ b/libsquoosh/package.json
@@ -36,6 +36,7 @@
     "rollup": "^2.46.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.3",
+    "del": "^6.1.1",
     "which": "^2.0.2"
   }
 }
