Ensure browser supports workers-in-workers

--- a/worker-tsconfig.json
+++ b/worker-tsconfig.json
@@ -8,6 +8,7 @@
     "src/features/**/shared/**/*",
     "src/features/worker-utils/**/*",
     "src/features-worker/**/*",
+    "src/worker-shared/**/*",
     "src/sw/**/*"
   ]
 }
