--- a/client-tsconfig.json
+++ b/client-tsconfig.json
@@ -14,6 +14,7 @@
     // for comlink
     "src/features/**/worker/**/*",
     "src/features-worker/**/*",
-    "src/features/worker-utils/**/*"
+    "src/features/worker-utils/**/*",
+    "src/worker-shared/**/*"
   ]
 }
