--- a/generic-tsconfig.json
+++ b/generic-tsconfig.json
@@ -17,7 +17,8 @@
       "static-build/*": ["src/static-build/*"],
       "client/*": ["src/client/*"],
       "shared/*": ["src/shared/*"],
-      "features/*": ["src/features/*"]
+      "features/*": ["src/features/*"],
+      "worker-shared/*": ["src/worker-shared/*"]
     }
   }
 }
