--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
     "typescript": "^4.4.4",
-    "which": "^2.0.2"
+    "which": "^2.0.2",
+    "wasm-feature-detect": "^1.2.11"
   },
   "lint-staged": {
     "*.{js,css,json,md,ts,tsx}": "prettier --write",
     "*.{c,h,cpp,hpp}": "clang-format -i",
     "*.rs": "rustfmt"
-  },
-  "dependencies": {
-    "wasm-feature-detect": "^1.2.11"
   }
 }
