--- a/codecs/resize/Cargo.toml
+++ b/codecs/resize/Cargo.toml
@@ -3,6 +3,7 @@ name = "squoosh-resize"
 version = "0.1.0"
 authors = ["Surma <surma@surma.link>"]
 publish = false
+edition = "2021"
 
 [lib]
 #crate-type = ["cdylib", "rlib"]
