--- a/codecs/avif/Makefile
+++ b/codecs/avif/Makefile
@@ -1,6 +1,6 @@
 # libavif and libaom versions are from
-# https://docs.google.com/document/d/1wEEA5rRU7wT54k41u3qyZIZHDCJArIMzLuzsrLAwaK8/edit
-CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/20a0f7fa6268b5656fd66bdf39d0d70c8387eb51.tar.gz
+# google3/third_party/libavif/METADATA
+CODEC_URL = https://github.com/AOMediaCodec/libavif/archive/647c3c208cf152395d777c1bf7240d2ecf7df5a9.tar.gz
 CODEC_PACKAGE = node_modules/libavif.tar.gz
 
 LIBAOM_URL = https://aomedia.googlesource.com/aom/+archive/v3.6.0.tar.gz
